--- a/index.html
+++ b/index.html
@@ -250,11 +250,31 @@ I held weekly office hours to help students with the concepts and homework assig
             </video></h1><p>Chirayu Garg and I implemented a variation of the algorithm described in the paper Howard, Andrew. “Real-time stereo visual odometry for autonomous ground vehicles.” (<a href="https://ieeexplore.ieee.org/document/4651147/">2008 IEEE/RSJ International Conference on Intelligent Robots and Systems (2008)</a>) using using Python 3 and OpenCV 3.0. The aim of the project was to plot the trajectory of a moving vehicle using a sequence of images captured by a camera on top of the vehicle. The demo video above shows the trajectory plotted by our algorithm for the vehicle shown on the right.<br><a href="https://github.com/utkarshj1303/Stereo-Visual-Odometry-Plotting-An-Objects-Trajectory-Using-A-Sequence-Of-Images">Github Repository</a></p><br>
          <h3>Art Generation with Neural Style Transfer</h3><br>
             <h1 style="width: 80%;margin: auto;"><img src="images/StyleTransfer.png"><h1>
-            </h1><p>One of the many cool things I learned in the Convolutional Neural Networks course on Coursera was how to use use neural networks to transfer the style in one image onto another.<br><a href="https://github.com/utkarshj1303/Art-Generation-with-Neural-Style-Transfer-Coursera-Deep-Learning-Convolutional-Neural-Networks">Github Repository</a></p>
+            </h1><p>One of the many cool things I learned in the Convolutional Neural Networks course on Coursera was how to use use neural networks to transfer the style of one image onto another.<br><a href="https://github.com/utkarshj1303/Art-Generation-with-Neural-Style-Transfer-Coursera-Deep-Learning-Convolutional-Neural-Networks">Github Repository</a></p>
+<br>
+         <h3>Academic Advisor</h3><br> 
+             <div style = "width: 80%; margin-left: 20%;" class="container">
+        <h2  style="width: 35%;"><img src="images/AcadAdvisor.png"></h2>
+        <video width="45%" height="40%" controls>
+               <source src="images/ScraperVid.mp4" type="video/mp4">
+            </video>
+    </div>
+<p>My proposal for an Android application that helps the students of UW-Madison choose courses that align with their interests and fulfill the degree requirements of their major was chosen as one of the top 20 projects out of 130 and was developed by a me and team of students in CS 506. Academic Advisor is an Android Application that aggregates data from the UW Course Guide, Rate My Professors and UW Madison Course Grade Distribution. The app generates a list of courses based on the users selected range of professor rating, range of average gpa and L&S requirement which they wish to satisfy. This was submitted as the final project for UW - Madison's CS 506 Software Engineering course. The project consists of a frontend which is an Android application and a server which starts the scrapers and then stores the scraped data in a database which the Android application then queries. A major part of my work on the project was developing the scrapers for Rate My Professors and the UW Madison Course Guide. <strong>The video above shows my Course Guide scraper in action. It automatically opens the Course Guide page, goes through the list of subjects and scrapes the information from the page and stores it in JSON format. The pictures to the left of the video are screenshots of the final Android application.</strong><br><a href="https://github.com/utkarshj1303/Academic-Advisor">Github Repository</a></p>
 <br>
          <h3>Image Classifier For Healthy And Retinopathy Retinas</h3><br>
             <h1 style="width: 80%;margin: auto;"><img src="images/RetinopathyClassifier.png"><h1>
             </h1><p>For my final project in CS 567 Medical Image Analysis, I implemented a classifier in MATLAB that differentiates between healthy and retinopathy retinas. I used various image analysis techniques to extract features unique to the retinopathy retinas and then used KNN and Logistic Regression for cross validation.<br><a href="https://github.com/utkarshj1303/Image-Classifier-For-Healthy-And-Retinopathy-Retinas">Github Repository</a></p>
+<br>
+         <h3>Boundary Detection, Object Tracking, Panorama Stitching</h3><br>
+             <div style = "width: 90%; margin:auto;" class="container">
+                       <h2  style="height: 0.5%;"><img src="images/BoundaryDetection.png"></h2>
+                <video width="24%" height="0%" controls>
+               <source src="images/ObjTracking.mp4" type="video/mp4">
+            </video>
+            <h2  style="width: 36%;"><img src="images/panorama.png"></h2>
+
+    </div>
+            </h1><p>Boundary detection, object tracking, and panorama stitching are just some of the cool things I learned how to do in CS 766 Computer Vision. Above are pitcures and a video of the output of some of my homework assignments from CS 766.<br><a href="https://github.com/utkarshj1303/Computer-Vision-CS-766">Github Repository</a></p>
   
       </div>
    </section> <!-- Portfolio Section End-->
