--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ Deep Learning Specialization - Convolutional Neural Networks (Coursera) - <a hre
 
       <!-- Work
       ----------------------------------------------- -->
-      <div class="row work">
+      <div class="row education">
 
          <div class="three columns header-col">
             <h1>Work<br><span>Experience</span></h1>
@@ -236,6 +236,31 @@ I held weekly office hours to help students with the concepts and homework assig
 
       </div> <!-- End Work -->
 
+            <!-- Work
+      ----------------------------------------------- -->
+      <div class="row work">
+
+         <div class="three columns header-col">
+            <h1>Competitive<br><span>Programming</span></h1>
+
+         </div>
+
+         <div class="nine columns main-col">
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <p> I love the thrill of participating in competitive programming contests.
+                  </p>
+
+               </div>
+
+            </div> <!-- item end -->
+
+         </div> <!-- main-col end -->
+
+      </div> <!-- End Work -->
    </section> <!-- Resume Section End-->
 
 
