--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
             <h2>About Me</h2>
 
-            <p> I'm a Computer Science major at the University of Wisconsin, Madison in my senior year. 
+            <p> I'm a Computer Science major at the University of Wisconsin, Madison in my senior year. I'm a passionate software developer who loves building cool products and enjoys competing in competitive programming contests in my free time. I also love to travel. I was born in Boston, Massachusetts after which I've lived Chicago, San Jose and New Delhi. Scroll down to learn more about the things I've worked on. Contact me if your interested in working together or even if you just want to say hello!
             </p>
 
             <div class="row">
@@ -110,7 +110,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="Resume.pdf" class="button"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
 
@@ -236,6 +236,32 @@ I held weekly office hours to help students with the concepts and homework assig
 
       </div> <!-- End Work -->
 
+            <div class="row education">
+
+         <div class="three columns header-col">
+            <h1>Volunteer<br><span>Experience</span></h1>
+
+         </div>
+
+         <div class="nine columns main-col">
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>
+Enactus DTU <img class="ctc"  src="images/enactus.png" alt="" /></h3>
+                  <p class="info">Project Chaap Member <span>&bull;</span> <em class="date">Aug 2015 - Oct 2016</em></p>
+                  <p>
+The objective of Project Chaap is to empower women socially and economically by training them in screen printing on tee shirts and thereby help them set up an independent business. It was inspiring to see how this work enabled the women to bring similar benefits to the lives of other women by employing them in their business. As a part of Project Chaap, I worked in a team and we helped the women set up their business by finding suitable suppliers for tshirts, paint etc; setting up training workshops and getting orders for them from various colleges.               </div>
+
+            </div> <!-- item end -->
+
+         </div> <!-- main-col end -->
+
+      </div> <!-- End Work -->
+
+
             <!-- Work
       ----------------------------------------------- -->
       <div class="row work">
@@ -250,12 +276,12 @@ I held weekly office hours to help students with the concepts and homework assig
             <div class="row item">
 
                <div class="twelve columns">
-
-                  <p> I love the thrill of participating in competitive programming contests.
+                  <p> I enjoy the thrill of competing in competitive programming contests. I actively participated in the monthly long challenges on Codechef. I love participating in contests such as Google Code Jam, Google Kickstart, Facebook Hackercup, and Codechef Snackdown as well as challenges on Hackerrank, Leetcode, Hackereath and Codeforces in my free time. I primarily use <strong>C++</strong> while participating in contests. Some of my competitive programming profiles and achievements are listed below.<br>
+                     <span>&bull;</span><a href="https://www.codechef.com/users/utkarsh1303">Codechef (USA Rank 258)</a><br>
+                     <span>&bull;</span><a href="https://www.hackerrank.com/utkarsh1303?hr_r=1">Hackerrank (OpenBracket Delaware - Rank 74 - Invited to Onsite Round in Wilmington, Delaware)</a><br>
+<span>&bull;</span><a href="https://code.google.com/codejam/contest/4374486/scoreboard#sp=241">Google Kickstart Practice Round 2018 - Rank 260</a><br>
                   </p>
-
                </div>
-
             </div> <!-- item end -->
 
          </div> <!-- main-col end -->
@@ -272,7 +298,7 @@ I held weekly office hours to help students with the concepts and homework assig
             <h3>Stereo Visual Odometry</h3><br>
             <h1><video width="60%" height="55%" controls>
                <source src="images/demoVideo.mp4" type="video/mp4">
-            </video></h1><p>Chirayu Garg and I implemented a variation of the algorithm described in the paper Howard, Andrew. “Real-time stereo visual odometry for autonomous ground vehicles.” (<a href="https://ieeexplore.ieee.org/document/4651147/">2008 IEEE/RSJ International Conference on Intelligent Robots and Systems (2008)</a>) using using Python 3 and OpenCV 3.0. The aim of the project was to plot the trajectory of a moving vehicle using a sequence of images captured by a camera on top of the vehicle. The demo video above shows the trajectory plotted by our algorithm for the vehicle shown on the right.<br><a href="https://github.com/utkarshj1303/Stereo-Visual-Odometry-Plotting-An-Objects-Trajectory-Using-A-Sequence-Of-Images">Github Repository</a></p><br>
+            </video></h1><p>Chirayu Garg and I implemented a variation of the algorithm described in the paper Howard, Andrew. “Real-time stereo visual odometry for autonomous ground vehicles.” (<a href="https://ieeexplore.ieee.org/document/4651147/">2008 IEEE/RSJ International Conference on Intelligent Robots and Systems (2008)</a>) using <strong>Python</strong> and OpenCV 3.0. The aim of the project was to plot the trajectory of a moving vehicle using a sequence of images captured by a camera on top of the vehicle. The demo video above shows the trajectory plotted by our algorithm for the vehicle shown on the right.<br><a href="https://github.com/utkarshj1303/Stereo-Visual-Odometry-Plotting-An-Objects-Trajectory-Using-A-Sequence-Of-Images">Github Repository</a></p><br>
          <h3>Art Generation with Neural Style Transfer</h3><br>
             <h1 style="width: 80%;margin: auto;"><img src="images/StyleTransfer.png"><h1>
             </h1><p>One of the many cool things I learned in the Convolutional Neural Networks course on Coursera was how to use use neural networks to transfer the style of one image onto another.<br><a href="https://github.com/utkarshj1303/Art-Generation-with-Neural-Style-Transfer-Coursera-Deep-Learning-Convolutional-Neural-Networks">Github Repository</a></p>
@@ -284,22 +310,23 @@ I held weekly office hours to help students with the concepts and homework assig
                <source src="images/ScraperVid.mp4" type="video/mp4">
             </video>
     </div>
-<p>My proposal for an Android application that helps the students of UW-Madison choose courses that align with their interests and fulfill the degree requirements of their major was chosen as one of the top 20 projects out of 130 and was developed by a me and team of students in CS 506. Academic Advisor is an Android Application that aggregates data from the UW Course Guide, Rate My Professors and UW Madison Course Grade Distribution. The app generates a list of courses based on the users selected range of professor rating, range of average gpa and L&S requirement which they wish to satisfy. This was submitted as the final project for UW - Madison's CS 506 Software Engineering course. The project consists of a frontend which is an Android application and a server which starts the scrapers and then stores the scraped data in a database which the Android application then queries. A major part of my work on the project was developing the scrapers for Rate My Professors and the UW Madison Course Guide. <strong>The video above shows my Course Guide scraper in action. It automatically opens the Course Guide page, goes through the list of subjects and scrapes the information from the page and stores it in JSON format. The pictures to the left of the video are screenshots of the final Android application.</strong><br><a href="https://github.com/utkarshj1303/Academic-Advisor">Github Repository</a></p>
+<p>My proposal for an Android application that helps the students of UW-Madison choose courses that align with their interests and fulfill the degree requirements of their major was chosen as one of the top 20 projects out of 130 and was developed by a me and team of students in CS 506. Academic Advisor is an Android application that aggregates data from the UW Course Guide, Rate My Professors and UW Madison Course Grade Distribution. The app generates a list of courses based on the users selected range of professor rating, range of average gpa and L&S requirement which they wish to satisfy. This was submitted as the final project for UW - Madison's CS 506 Software Engineering course. The project consists of an Android application and a server which starts the scrapers and then stores the scraped data in a database which the Android application then queries. A major part of my work on the project was developing the scrapers for Rate My Professors and the UW Madison Course Guide. I wrote the Course Guide Scraper in <strong>Python</strong> and the Rate My Professors scraper in <strong>Java</strong>. <strong>The video above shows my Course Guide scraper in action. It automatically opens the Course Guide page, goes through the list of subjects and scrapes the information from the page and stores it in JSON format. The pictures to the left of the video are screenshots of the final Android application.</strong><br><a href="https://github.com/utkarshj1303/Academic-Advisor">Github Repository</a></p>
 <br>
          <h3>Image Classifier For Healthy And Retinopathy Retinas</h3><br>
             <h1 style="width: 80%;margin: auto;"><img src="images/RetinopathyClassifier.png"><h1>
-            </h1><p>For my final project in CS 567 Medical Image Analysis, I implemented a classifier in MATLAB that differentiates between healthy and retinopathy retinas. I used various image analysis techniques to extract features unique to the retinopathy retinas and then used KNN and Logistic Regression for cross validation.<br><a href="https://github.com/utkarshj1303/Image-Classifier-For-Healthy-And-Retinopathy-Retinas">Github Repository</a></p>
+            </h1><p>For my final project in CS 567 Medical Image Analysis, I implemented a classifier in <strong>MATLAB</strong> that differentiates between healthy and retinopathy retinas. I used various image analysis techniques to extract features unique to the retinopathy retinas and then used KNN and Logistic Regression for cross validation.<br><a href="https://github.com/utkarshj1303/Image-Classifier-For-Healthy-And-Retinopathy-Retinas">Github Repository</a></p>
 <br>
-         <h3>Boundary Detection, Object Tracking, Panorama Stitching</h3><br>
-             <div style = "width: 90%; margin:auto;" class="container">
-                       <h2  style="height: 0.5%;"><img src="images/BoundaryDetection.png"></h2>
-                <video width="24%" height="0%" controls>
+         <h3>Panorama Stitching, Object Tracking, Boundary Detection</h3><br>
+             <div style = "width: 90%; margin-left: 9%" class="container">
+                           <h2  style="width: 33%;"><img src="images/panorama.png"></h2>
+                <video width="22%" height="0%" controls>
                <source src="images/ObjTracking.mp4" type="video/mp4">
             </video>
-            <h2  style="width: 36%;"><img src="images/panorama.png"></h2>
+                       <h2  style="width: 36.5%;"><img src="images/BoundaryDetection.png"></h2>
+
 
     </div>
-            </h1><p>Boundary detection, object tracking, and panorama stitching are just some of the cool things I learned how to do in CS 766 Computer Vision. Above are pitcures and a video of the output of some of my homework assignments from CS 766.<br><a href="https://github.com/utkarshj1303/Computer-Vision-CS-766">Github Repository</a></p>
+            </h1><p>Panorama stitching, object tracking, and boundary detection are just some of the cool things I learned how to do in CS 766 Computer Vision. Above are pitcures and a video of the output of some of my homework assignments from CS 766.<br><a href="https://github.com/utkarshj1303/Computer-Vision-CS-766">Github Repository</a></p>
   
       </div>
    </section> <!-- Portfolio Section End-->
