--- a/index.html
+++ b/index.html
@@ -70,9 +70,6 @@
          <a class="smoothscroll" href="#about"><i class="icon-down-circle"></i></a>
       </p>
 
-   </header> <!-- Header End -->
-<html oncontextmenu="return false">
-</html>
 
    <!-- About Section
    ================================================== -->
@@ -295,7 +292,7 @@ The objective of Project Chaap is to empower women socially and economically by 
    <section id="portfolio">
       <div>
             <h1>Cool Stuff I've Worked On</h1>
-            <h3>Stereo Visual Odometry<br></h3>
+            <h3>Stereo Visual Odometry</h3><br>
             <h1><video width="60%" height="55%" controls>
                <source src="images/demoVideo.mp4" type="video/mp4">
             </video></h1><p class="x">Chirayu Garg and I implemented a variation of the algorithm described in the paper Howard, Andrew. “Real-time stereo visual odometry for autonomous ground vehicles.” (<a href="https://ieeexplore.ieee.org/document/4651147/">2008 IEEE/RSJ International Conference on Intelligent Robots and Systems (2008)</a>) using <strong>Python</strong> and OpenCV 3.0. The aim of the project was to plot the trajectory of a moving vehicle using a sequence of images captured by a camera on top of the vehicle. The demo video above shows the trajectory plotted by our algorithm for the vehicle shown on the right.<br><a href="https://github.com/utkarshj1303/Stereo-Visual-Odometry-Plotting-An-Objects-Trajectory-Using-A-Sequence-Of-Images">Github Repository</a></p><br>
