--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
          <a class="smoothscroll" href="#about"><i class="icon-down-circle"></i></a>
       </p>
 
+   </header> <!-- Header End -->
+
 
    <!-- About Section
    ================================================== -->
