--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ The objective of Project Chaap is to empower women socially and economically by 
 
 
     </div>
-            </h1><p>Panorama stitching, object tracking, and boundary detection are just some of the cool things I learned how to do in CS 766 Computer Vision. Above are pitcures and a video of the output of some of my homework assignments from CS 766.<br><a href="https://github.com/utkarshj1303/Computer-Vision-CS-766">Github Repository</a></p>
+            </h1><p>Panorama stitching, object tracking, and boundary detection are just some of the cool things I learned how to do in CS 766 Computer Vision. Above are pictures and a video of the output of some of my homework assignments from CS 766.<br><a href="https://github.com/utkarshj1303/Computer-Vision-CS-766">Github Repository</a></p>
   
       </div>
    </section> <!-- Portfolio Section End-->
