--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
                   <p>
                   Relevant Coursework :<br> 
-               CS 540 Introduction to Artificial Intelligence <br>CS 506 Software Engineering<br> ECON 101 Principles of Microeconomics<br> CS 354 Machine Organization and Programming<br> CS 368 Learning a Programming Language (MATLAB)<br> <strong>CS 766 Computer Vision (Graduate) </strong><br> CS 567 Medical Image Analysis<br> CS 532 Matrix Methods in Machine Learning (Fall 2018)<br> CS 640 Introduction to Computer Networks (Fall 2018)<br> CS 576 Introduction to Bioinformatics (Fall 2018)
+               CS 540 Introduction to Artificial Intelligence <br>CS 506 Software Engineering<br> ECON 101 Principles of Microeconomics<br> CS 354 Machine Organization and Programming<br> CS 368 Learning a Programming Language (MATLAB)<br> <strong>CS 766 Computer Vision (Graduate) </strong><br> CS 567 Medical Image Analysis<br> CS 532 Matrix Methods in Machine Learning <br> CS 640 Introduction to Computer Networks <br> CS 576 Introduction to Bioinformatics <br> CS 639 Data Management For Data Science (Spring 2019)
                   </p>
 
                </div>
