--- a/index.html
+++ b/index.html
@@ -65,12 +65,11 @@
 
          <div class="banner-text">
             <p><h1 class="responsive-headline">I'm Utkarsh Jain</h1></p>
-            <h3 style="font-size: 130%"> Student | Machine Learning Enthusiast | Competitive Programmer <br></h3>
             <hr />
             <ul class="social">
                <li><a href="https://www.linkedin.com/in/utkarshj1303/"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://github.com/utkarshj1303"><i class="fa fa-github"></i></a></li>
-               <li><a href="mailto:utkarsh.jain@wisc.edu"><i class="fa fa-envelope"></i></a></li>
+               <li><a href="mailto:utkarshj1303@gmail.com"><i class="fa fa-envelope"></i></a></li>
             </ul>
          </div>
       </div>
@@ -111,7 +110,7 @@
                   <p class="address">
 						   <span>Utkarsh Jain</span><br>
 						   <span>(608)504-1332</span><br>
-                     <span>utkarsh.jain@wisc.edu</span>
+                     <span>utkarshj1303@gmail.com</span>
 					   </p>
 
                </div>
@@ -150,11 +149,13 @@
                <div class="twelve columns">
 
                   <h3>University of Wisconsin, Madison</h3>
-                  <p class="info">BS in Computer Science <br> <em class="gpa">GPA: <strong>4.0/4.0</strong></em><br> <em class="date">2017- 2019 (Expected Graduation: May 2019)</em> </p>
+                  <p class="info">BS in Computer Science <br> <em class="gpa">GPA: <strong>4.0/4.0</strong></em><br> <em class="date">2017- 2019</em> </p>
 
                   <p>
                   Relevant Coursework :<br> 
-               CS 540 Introduction to Artificial Intelligence <br>CS 506 Software Engineering<br> ECON 101 Principles of Microeconomics<br> CS 354 Machine Organization and Programming<br> CS 368 Learning a Programming Language (MATLAB)<br> <strong>CS 766 Computer Vision (Graduate) </strong><br> CS 567 Medical Image Analysis<br> CS 532 Matrix Methods in Machine Learning <br> CS 640 Introduction to Computer Networks <br> CS 576 Introduction to Bioinformatics <br> CS 639 Data Management For Data Science (Spring 2019)
+               CS 540 Introduction to Artificial Intelligence <br>CS 506 Software Engineering<br> ECON 101 Principles of Microeconomics<br> CS 354 Machine Organization and Programming<br> CS 368 Learning a Programming Language (MATLAB)<br> <strong>CS 766 Computer Vision (Graduate) </strong><br> CS 567 Medical Image Analysis<br> CS 532 Matrix Methods in Machine Learning <br> CS 640 Introduction to Computer Networks <br> CS 576 Introduction to Bioinformatics <br> CS 639 Data Management For Data Science <br>
+               CS 537 Intro to Operating Systems <br>
+               CS 435 Introduction to Cryptography <br>
                   </p>
 
                </div>
@@ -207,6 +208,26 @@ Deep Learning Specialization - Convolutional Neural Networks (Coursera) - <a hre
          </div>
 
          <div class="nine columns main-col">
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>Bloomberg L.P.<img class="ctc"  src="images/BB.png" alt="" /></h3>
+                  <p class="info">Software Engineer <span>&bull;</span> <em class="date">August 2019 - Present</em></p>
+                  <p>
+                     <span>&bull;</span> Identified bottlenecks by analyzing performance for different service configurations using a Jupyter notebook/Python.<br>
+                     <span>&bull;</span> Leveraged existing optimizations (use of threads and fibers in C++ to effectively optimize an I/O bound workflow, redis caching etc.) and took into account considerations such as network load on downstream services to design solutions for increasing service throughput.<br>
+                     <span>&bull;</span> Helped <strong>increase the throughput of our main I/O bound C++17 service 3x</strong> by reducing slow service calls.<br>
+                     <span>&bull;</span> Contributed to a dashboard for monitoring service throughput.<br>
+                     <span>&bull;</span> Gained a lot of experience in debugging legacy C++ services through quarterly sprint long rotations where I was responsible for all incoming client bugs.<br>
+                     <span>&bull;</span> Contributed to the migration effort from our old to new stack by adding various features/fixing bugs.<br>
+                     <span>&bull;</span> Worked with Product/UX teams and completely owned roll out of a feature I implemented during hackathon week to simplify user interaction with our frontend.<br>                   
+                  </p>
+
+               </div>
+
+            </div> <!-- item end -->
 
             <div class="row item">
 
@@ -294,6 +315,29 @@ The objective of Project Chaap is to empower women socially and economically by 
 
          </div> <!-- main-col end -->
 
+         <div class="three columns header-col">
+            <h1><span>Let's Chat About</span><br></h1>
+
+         </div>
+
+         <div class="nine columns main-col">
+
+            <div class="row item">
+
+               <div class="twelve columns">
+                  <p>
+                  <span>&bull;</span> Cool features in C++, my favorite programming language. Though I'm nowhere near an expert, 4/10 at best, C++ is the language I'm most comfortable and I always love learning new things about the language. <br>
+                  <span>&bull;</span> Segment Trees, a cool but lesser known data structure <br>
+                  <span>&bull;</span> Fun things to do in NYC, my favorite city <br>
+                  <span>&bull;</span> Interesting/unique software optimizations. I love thinking about ways to optimize software and am constantly amazed by the ingenious optimizations engineers come up. <br>
+                  <span>&bull;</span> Surprising applications of Machine Learning <br>
+                  </p>
+               </div>
+            </div> <!-- item end -->
+
+         </div> <!-- main-col end -->
+
+
       </div> <!-- End Work -->
    </section> <!-- Resume Section End-->
 
@@ -347,7 +391,7 @@ The objective of Project Chaap is to empower women socially and economically by 
             <ul class="social-links">
                <li><a href="https://www.linkedin.com/in/utkarshj1303/"><i class="fa fa-linkedin"></i></a></l>
                <li><a href="https://github.com/utkarshj1303"><i class="fa fa-github"></i></a></li>
-               <li><a href="mailto:utkarsh.jain@wisc.edu"><i class="fa fa-envelope"></i></a></li>
+               <li><a href="mailto:utkarshj1303@gmail.com"><i class="fa fa-envelope"></i></a></li>
             </ul>
 
             <ul class="copyright">
