--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             <h2>About Me</h2>
 
-            <p> I'm a software engineer at Bloomberg LP. I love building cool products and enjoy competing in competitive programming contests in my free time. I also love to travel. I was born in Boston, Massachusetts after which I've lived in Chicago, San Jose and New Delhi. Scroll down to learn more about the things I've worked on.
+            <p> I'm currently a Software Engineer at Bloomberg LP. I'm in love with everything CS and strive to work on challenging problems. I also love to travel. I was born in Boston, Massachusetts after which I've lived in Chicago, San Jose and New Delhi. Scroll down to learn more about the things I've worked on.
             </p>
 
             <div class="row">
