remove lets chat

--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@ The objective of Project Chaap is to empower women socially and economically by 
 
          </div> <!-- main-col end -->
 
+<!--
          <div class="three columns header-col">
             <h1><span>Let's Chat About</span><br></h1>
 
@@ -332,10 +333,11 @@ The objective of Project Chaap is to empower women socially and economically by 
                   <span>&bull;</span> Interesting/unique software optimizations. I love thinking about ways to optimize software and am constantly amazed by the ingenious optimizations engineers come up. <br>
                   <span>&bull;</span> Surprising applications of Machine Learning <br>
                   </p>
-               </div>
-            </div> <!-- item end -->
+               </div> -->
+               <!--
+            </div> --> <!-- item end -->
 
-         </div> <!-- main-col end -->
+        <!-- </div> --><!-- main-col end -->
 
 
       </div> <!-- End Work -->
