--- a/index.html
+++ b/index.html
@@ -217,12 +217,14 @@ Deep Learning Specialization - Convolutional Neural Networks (Coursera) - <a hre
                   <p class="info">Software Engineer <span>&bull;</span> <em class="date">August 2019 - Present</em></p>
                   <p>
                      <span>&bull;</span> Identified bottlenecks by analyzing performance for different service configurations using a Jupyter notebook/Python.<br>
+                     <!--
                      <span>&bull;</span> Leveraged existing optimizations (use of threads and fibers in C++ to effectively optimize an I/O bound workflow, redis caching etc.) and took into account considerations such as network load on downstream services to design solutions for increasing service throughput.<br>
+                 	 -->
                      <span>&bull;</span> Helped <strong>increase the throughput of our main I/O bound C++17 service 3x</strong> by reducing slow service calls.<br>
                      <span>&bull;</span> Contributed to a dashboard for monitoring service throughput.<br>
                      <span>&bull;</span> Gained a lot of experience in debugging legacy C++ services through quarterly sprint long rotations where I was responsible for all incoming client bugs.<br>
                      <span>&bull;</span> Contributed to the migration effort from our old to new stack by adding various features/fixing bugs.<br>
-                     <span>&bull;</span> Worked with Product/UX teams and completely owned roll out of a feature I implemented during hackathon week to simplify user interaction with our frontend.<br>                   
+                     <span>&bull;</span> Took various internal technical courses including a course in modern C++ and an initial 1.5 month long boot camp which included various topics including Python, Javascript, C++.<br>                   
                   </p>
 
                </div>
