--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             <h2>About Me</h2>
 
-            <p> I'm currently a Software Engineer at Bloomberg LP. I'm in love with everything CS and strive to work on challenging problems. I also love to travel. I was born in Boston, Massachusetts after which I've lived in Chicago, San Jose and New Delhi. Scroll down to learn more about the things I've worked on.
+            <p> I'm in love with everything CS and strive to work on challenging problems. I also love to travel. I was born in Boston, Massachusetts after which I've lived in Chicago, San Jose and New Delhi. Scroll down to learn more about the things I've worked on.
             </p>
 
             <div class="row">
@@ -213,8 +213,25 @@ Deep Learning Specialization - Convolutional Neural Networks (Coursera) - <a hre
 
                <div class="twelve columns">
 
+                  <h3>Twitter<img class="ctc"  src="images/Twitter.svg" alt="" /></h3>
+                  <p class="info">Software Engineer <span>&bull;</span> <em class="date">September 2021 - June 2022</em></p>
+                  <p>
+                     <span>&bull;</span> Worked on the Messaging team which manages the Apache Kafka infrastructure at Twitter and provides API's to internal clients to help them effectively use Kafka for their needs.<br>
+                     <span>&bull;</span>  Created dashboards to help customers get a better insight into the performance of their Kafka Connect instances.<br>
+                     <span>&bull;</span> Helped automate a tedious workflow which helped customers more quickly deploy Kafka Connect instances by themselves.<br>
+                     <span>&bull;</span> Rapidly on-boarded and participated in on-call shifts where I independently closed most of the pages assigned to me.<br>                   
+                  </p>
+
+               </div>
+
+            </div> <!-- item end -->
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
                   <h3>Bloomberg L.P.<img class="ctc"  src="images/BB.png" alt="" /></h3>
-                  <p class="info">Software Engineer <span>&bull;</span> <em class="date">August 2019 - Present</em></p>
+                  <p class="info">Software Engineer <span>&bull;</span> <em class="date">August 2019 - September 2021</em></p>
                   <p>
                      <span>&bull;</span> Identified bottlenecks by analyzing performance for different service configurations using a Jupyter notebook/Python.<br>
                      <!--
