--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@ Deep Learning Specialization - Convolutional Neural Networks (Coursera) - <a hre
                   <p>
                      <span>&bull;</span> Worked on the Messaging team which manages the Apache Kafka infrastructure at Twitter and provides API's to internal clients to help them effectively use Kafka for their needs.<br>
                      <span>&bull;</span>  Created dashboards to help customers get a better insight into the performance of their Kafka Connect instances.<br>
-                     <span>&bull;</span> Helped automate a tedious workflow which helped customers more quickly deploy Kafka Connect instances by themselves.<br>
-                     <span>&bull;</span> Rapidly on-boarded and participated in on-call shifts where I independently closed most of the pages assigned to me.<br>                   
+                     <span>&bull;</span> Helped automate a tedious workflow which helped customers quickly deploy Kafka Connect instances by themselves.<br>
+                     <span>&bull;</span> Rapidly on-boarded and participated in on-call shifts where I independently closed most of the pages assigned to me.<br>           
                   </p>
 
                </div>
