--- a/index.html
+++ b/index.html
@@ -209,6 +209,28 @@ Deep Learning Specialization - Convolutional Neural Networks (Coursera) - <a hre
 
          <div class="nine columns main-col">
 
+         	<div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>Amazon<img class="ctc"  src="images/Amazon.jpeg" alt="" /></h3>
+                  <p class="info">Software Engineer <span>&bull;</span> <em class="date">October 2022 - Present</em></p>
+                  <p>
+                     <span>&bull;</span> Part of the OMS team which is responsible for a system used to create ad campaigns.
+<br>
+<span>&bull;</span> Collaborated with a team member to successfully design and implement all required functionality to transition away from Salesforce for advertising campaigns exceeding $750k.
+<br>
+<span>&bull;</span> Designed and implemented a custom Google Drive-like system from scratch, closely working with and receiving constant feedback from the product team.
+<br>
+<span>&bull;</span> Developed the back end for the Google Drive-like system using Java, AWS S3, and AWS DynamoDB. Implemented the front end using JavaScript and React.
+<br>
+<span>&bull;</span> Successfully met the original tight deadline for the system despite a team member taking an unexpected medical leave by taking over and finishing their work along with mine.             
+                  </p>
+
+               </div>
+
+            </div> <!-- item end -->
+
             <div class="row item">
 
                <div class="twelve columns">
@@ -413,10 +435,6 @@ The objective of Project Chaap is to empower women socially and economically by 
                <li><a href="https://www.linkedin.com/in/utkarshj1303/"><i class="fa fa-linkedin"></i></a></l>
                <li><a href="https://github.com/utkarshj1303"><i class="fa fa-github"></i></a></li>
                <li><a href="mailto:utkarshj1303@gmail.com"><i class="fa fa-envelope"></i></a></li>
-            </ul>
-
-            <ul class="copyright">
-               <li>&copy; Copyright 2021 Utkarsh Jain</li>
             </ul>
 
          </div>
